--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@testing-library/user-event": "^7.2.1",
     "axios": "^0.21.1",
     "bootstrap": "^4.5.3",
+    "cpf-cnpj-validator": "^1.0.3",
     "jquery": "^3.5.1",
     "jwt-decode": "^3.1.1",
     "react": "^16.14.0",
