--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "frontend",
   "version": "0.5.0",
-  "description": "React - Be a Hero",
+  "description": "Maestro Frotas",
   "main": "index.js",
   "private": true,
   "engines": {
