--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "cpf-cnpj-validator": "^1.0.3",
     "jquery": "^3.5.1",
     "jwt-decode": "^3.1.1",
+    "public-ip": "^4.0.3",
     "react": "^16.14.0",
     "react-bootstrap": "^1.4.0",
     "react-dom": "^16.14.0",
