--- a/package.json
+++ b/package.json
@@ -26,7 +26,8 @@
     "react-router-dom": "^5.2.0",
     "react-scripts": "^4.0.0",
     "reactstrap": "^8.6.0",
-    "recharts": "^2.0.9"
+    "recharts": "^2.0.9",
+    "websecure-local-storage": "^1.0.11"
   },
   "scripts": {
     "start": "react-scripts start",
